--- a/en.yaml
+++ b/en.yaml
@@ -34,3 +34,5 @@ text_5: Telegram https://t.me/KernelPanix
 text_6: Donate List
 can_install_cac_yeu_cau_can_thiet: Necessary requirements have not been installed
 chay_lenh_sau: Run the following command
+dang_cai_dat: Installing
+cai_dat_xong: Installation completed
