--- a/vi.yaml
+++ b/vi.yaml
@@ -35,3 +35,5 @@ text_5: Telegram https://t.me/KernelPanix
 text_6: Danh sách Ủng Hộ
 can_install_cac_yeu_cau_can_thiet: Cần cài đặt các yêu cầu cần thiết
 chay_lenh_sau: Chạy lệnh sau
+dang_cai_dat: Đang cài đặt
+cai_dat_xong: Cài đặt xong
