--- a/en.yaml
+++ b/en.yaml
@@ -36,3 +36,4 @@ can_install_cac_yeu_cau_can_thiet: Necessary requirements have not been installe
 chay_lenh_sau: Run the following command
 dang_cai_dat: Installing
 cai_dat_xong: Installation completed
+ban_muon_quay_lai_memu_khong: Do you want to return to the Menu ?
