--- a/en.yaml
+++ b/en.yaml
@@ -39,3 +39,4 @@ chay_lenh_sau: Run the following command
 dang_cai_dat: Installing
 cai_dat_xong: Installation completed
 ban_muon_quay_lai_memu_khong: Do you want to return to the Menu ?
+chon_phien_ban_xui: Select X-UI version
