--- a/vi.yaml
+++ b/vi.yaml
@@ -40,3 +40,4 @@ chay_lenh_sau: Chạy lệnh sau
 dang_cai_dat: Đang cài đặt
 cai_dat_xong: Cài đặt xong
 ban_muon_quay_lai_memu_khong: Bạn có muốn quay lại Memu không ?
+chon_phien_ban_xui: Chọn phiên bản X-UI
