--- a/en.yaml
+++ b/en.yaml
@@ -40,3 +40,6 @@ dang_cai_dat: Installing
 cai_dat_xong: Installation completed
 ban_muon_quay_lai_memu_khong: Do you want to return to the Menu ?
 chon_phien_ban_xui: Select X-UI version
+nhap_username: Enter username
+nhap_password: Enter password
+nhap_port: Enter port
