--- a/en.yaml
+++ b/en.yaml
@@ -43,3 +43,4 @@ chon_phien_ban_xui: Select X-UI version
 nhap_username: Enter username
 nhap_password: Enter password
 nhap_port: Enter port
+ban_co_muon_install_khong: Do you want install ?
