--- a/vi.yaml
+++ b/vi.yaml
@@ -44,3 +44,4 @@ chon_phien_ban_xui: Chọn phiên bản X-UI
 nhap_username: Nhập username
 nhap_password: Nhập password
 nhap_port: Nhập port
+ban_co_muon_install_khong: Bạn có muốn cài đặt không ?
