--- a/en.yaml
+++ b/en.yaml
@@ -44,3 +44,4 @@ nhap_username: Enter username
 nhap_password: Enter password
 nhap_port: Enter port
 ban_co_muon_install_khong: Do you want install ?
+ban_co_muon_xoa_database_cu_khong: Do you want remove old Database ?
