--- a/vi.yaml
+++ b/vi.yaml
@@ -46,3 +46,4 @@ nhap_password: Nhập password
 nhap_port: Nhập port
 ban_co_muon_install_khong: Bạn có muốn cài đặt không ?
 ban_co_muon_xoa_database_cu_khong: Bạn có muốn xóa Database cũ không ?
+ban_co_muon_quay_lai_proton_khong: Bạn có muốn quay lại ProtonBox menu không ?
