--- a/en.yaml
+++ b/en.yaml
@@ -45,3 +45,4 @@ nhap_password: Enter password
 nhap_port: Enter port
 ban_co_muon_install_khong: Do you want install ?
 ban_co_muon_xoa_database_cu_khong: Do you want remove old Database ?
+ban_co_muon_quay_lai_proton_khong: Do you want return ProtonBox menu ?
