--- a/vi.yaml
+++ b/vi.yaml
@@ -47,3 +47,4 @@ nhap_port: Nhập port
 ban_co_muon_install_khong: Bạn có muốn cài đặt không ?
 ban_co_muon_xoa_database_cu_khong: Bạn có muốn xóa Database cũ không ?
 ban_co_muon_quay_lai_proton_khong: Bạn có muốn quay lại ProtonBox menu không ?
+chon_phien_ban_soga: Chọn phiên bản Soga
