--- a/en.yaml
+++ b/en.yaml
@@ -47,3 +47,4 @@ ban_co_muon_install_khong: Do you want install ?
 ban_co_muon_xoa_database_cu_khong: Do you want remove old Database ?
 ban_co_muon_quay_lai_proton_khong: Do you want return ProtonBox menu ?
 chon_phien_ban_soga: Select Soga version
+khong_ho_tro_windows: Not support Windows
