--- a/en.yaml
+++ b/en.yaml
@@ -48,3 +48,5 @@ ban_co_muon_xoa_database_cu_khong: Do you want remove old Database ?
 ban_co_muon_quay_lai_proton_khong: Do you want return ProtonBox menu ?
 chon_phien_ban_soga: Select Soga version
 khong_ho_tro_windows: Not support Windows
+mo_port: Open port
+fix_port: Fix port
