--- a/vi.yaml
+++ b/vi.yaml
@@ -51,3 +51,6 @@ chon_phien_ban_soga: Chọn phiên bản Soga
 khong_ho_tro_windows: Không hỗ trợ Windows
 open_port: Mở port
 fix_port: Sửa port
+nhap_port: Nhập port
+single_port: Port đơn
+multi_port: Tất cả port
