--- a/en.yaml
+++ b/en.yaml
@@ -54,3 +54,4 @@ nhap_port: Input port
 single_port: Single port
 multi_port: All port
 system_setup: System setup
+ban_phai_chon_it_nhat_mot_lua_chon: you need choose one option
