--- a/vi.yaml
+++ b/vi.yaml
@@ -55,3 +55,4 @@ nhap_port: Nhập port
 single_port: Port đơn
 multi_port: Tất cả port
 system_setup: Cài đặt hệ thống
+ban_phai_chon_it_nhat_mot_lua_chon: Bạn cần chọn ít nhất một lựa chọn
